# OAgents

./: README.md
OAgents/: .env_template  .gitignore  pyproject.toml
OAgents/example/oagents_deep_research/: requirements.txt  run.py  run_gaia.py  run_gaia_tts.py
OAgents/example/oagents_deep_research/agent_kb/: agent_kb_retrieval.py  agent_kb_service.py  prompts.yaml
OAgents/example/oagents_deep_research/rag/embeddings/: openai_compatible_embedding.py  openai_embedding.py
OAgents/example/oagents_deep_research/rag/loaders/: base_io.py  unstructured_io.py
OAgents/example/oagents_deep_research/rag/messages/: __init__.py  base.py  func_message.py
OAgents/example/oagents_deep_research/rag/messages/conversion/sharegpt/: function_call_formatter.py
OAgents/example/oagents_deep_research/rag/messages/conversion/sharegpt/hermes/: hermes_function_formatter.py
OAgents/example/oagents_deep_research/rag/retrievers/: __init__.py  auto_retriever.py  cohere_rerank_retriever.py  simple_vector_retriever.py  vector_retriever.py
OAgents/example/oagents_deep_research/rag/storages/graph_storages/: nebula_graph.py
OAgents/example/oagents_deep_research/rag/storages/key_value_storages/: in_memory.py  json.py
OAgents/example/oagents_deep_research/rag/storages/object_storages/: base.py
OAgents/example/oagents_deep_research/rag/storages/vectordb_storages/: qdrant.py
OAgents/example/oagents_deep_research/rag/types/: unified_model_type.py
OAgents/example/oagents_deep_research/rag/utils/: commons.py
OAgents/example/oagents_deep_research/reflectors/: __init__.py  search_reflector.py
OAgents/example/oagents_deep_research/scripts/: async_web_crawler.py  audio_inspector_tool.py  automodel.py  reformulator.py  run_agents.py  scorer.py  searcher.py  similarity.py  text_inspector_tool.py  text_web_browser.py  visual_inspector_tool.py  visual_qa.py
OAgents/src/oagents/: __init__.py  agents.py  cli.py  e2b_executor.py  gradio_ui.py  memory.py  models.py  tools.py  utils.py  workflow.py
OAgents/src/oagents/prompts/: ORM.yaml  ORM_list_wise.yaml  PRM_list_wise.yaml  code_agent.yaml  single_node_reflection.yaml
(+120 files in other folders)
